--- a/new.html
+++ b/new.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!--title, includes and setup -->
 	<title>App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
    	<script src="/socket.io/socket.io.js"></script>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-      <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
-      <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
+    <!--basic css to center the applciation and funcitons -->
     <style>
         body {
             text-align: center;
@@ -22,10 +24,8 @@
     </style>
 </head>
 
-
 <body>
-<script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
-
+<!--login screen and inputs for login and register -->
 <div id="login_screen">
 	<div class="card" style="width: 22rem;">
 		<br>
@@ -37,6 +37,7 @@
   		<input type="password" id="login_password" placeholder="password" ><br><br>
   		<button id="login_button" type="button">Login </button><br>
   	<br>
+  	<!--takes users to the register screen -->
 	<button id="go_to_register" type="button">Register </button>
 	<br>
 	<br>
@@ -44,11 +45,13 @@
 </div>
 </div>
 
+<!--screen for users to create new acounts -->
 <div id="register_screen">
 	<div class="card" style="width: 22rem;">
 		<br>
 		<h3></h3>
 		<br>
+		<!--input values -->
 		Username: 
 		<input type="text" id="login_username_register" placeholder = "username"><br><br>
 		Password: 
@@ -64,14 +67,17 @@
   		<input type="radio" name="account_type" value="child" id="account_type_child">Child<br>  
   		<button id="register_button" type="submit"> Register </button> <br>
   		<br>
+  	<!--returns user to the home screen -->
   	<button id="cancel_register" type="button">Cancel </button>
   </div>
 </div>
 
+<!--home screen for the users -->
 <div id="home_screen">
 	<div class="card" style="width: 22rem;">
 		<br>
 		<h3></h3>
+	<!--mapping and tracking features exclusive to parents -->
 	<div id="parent_features">
 		<p id="child_name">Child Name: None </p>
     	<div id="outtermap"><div id="map" style="width: 275px; height: 275px"></div></div>
@@ -79,12 +85,14 @@
 		<button id="change_child" type="button">Change Child </button><br>
 		<button id="add_child" type="button">Add Child </button><br>
 	</div>
+	<!--emergency buttons and logout -->
 	<button id="panic_button" type="button">Panic </button><br>
 	<button id="medical_button" type="button">Medical </button><br>
 	<button id="logout_button" type="button">Logout </button>
 </div>
 </div>
 
+<!--screen that chances the child the parent is tracking -->
 <div id="change_child_screen">
 	<div class="card" style="width: 22rem;">
 		<br>
@@ -97,6 +105,7 @@
 	</div>
 </div>
 
+<!--screen to add new children for the parent to track -->
 <div id="add_child_screen">
 	<div class="card" style="width: 22rem;">
 		<br>
@@ -109,60 +118,64 @@
 	</div>
 </div>
 
+<!--screen that confirms the user wants to contact the police -->
 <div id="police_screen">
 	<div class="card" style="width: 22rem;">
 		<br>
 		<h3></h3>
 		<br>
-	<h3> Are you sure you want to send police to your child's location </h3><br>
+	<h3> Are you sure you want to call the police? </h3><br>
 	<button id="call_police" type="button"> Yes! </button><br>
 	<button id="cancel_police_call" type="button"> No! </button>
 </div>
 </div>
 
+<!--screen that confirms the user wants to contact medical services -->
 <div id="medical_screen">
 	<div class="card" style="width: 22rem;">
 		<br>
 		<h3></h3>
 		<br>
-	<h3> Are you sure you want to send medical services to your child's location? </h3>
+	<h3> Are you sure you want to call medical services? </h3>
 	<button id="call_medical" type="button"> Yes! </button><br>
 	<button id="cancel_medical_call" type="button"> No! </button>
 </div>
 </div>
 
+<!--screen that confirms the user contacted emergency services -->
 <div id="services_contacted_screen">
 	<div class="card" style="width: 22rem;">
 		<br>
 		<h3></h3>
 		<br>
 	<p> Emergency services have been contacted!</p>
+	<!--button to leave the screen -->
 	<button id="return_to_home"> Return to Home </button>
 	<div class="container-fluid">
 </div>
 
 </body>
-<!--<script src="app.js"></script> -->
+<!--bootstrap -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
 
-
+<!--centering and style -->
 <style>
-
-body {
-   text-align: center;
-}
-/*https://stackoverflow.com/questions/39031224/how-to-center-cards-in-bootstrap-4*/
-.card {
+	body {
+   		text-align: center;
+	}
+	/*https://stackoverflow.com/questions/39031224/how-to-center-cards-in-bootstrap-4*/
+	.card {
         margin: 0 auto; /* Added */
         float: none; /* Added */
         margin-bottom: 10px; /* Added */
-}
-
+	}
 </style>
+
 <script >
+//creates a socket
 let socketio = io.connect();
 
 //variables for different screens
@@ -176,7 +189,7 @@ let add_child_screen = document.getElementById('add_child_screen');
 let home_screen = document.getElementById("home_screen");
 let parent_features = document.getElementById("parent_features");
 
-//variables for buttons
+//variables for buttons and navigation 
 let login_button = document.getElementById('login_button');
 let go_to_register_button = document.getElementById('go_to_register');
 let register_user_button = document.getElementById('register_button');
@@ -195,7 +208,7 @@ let submit_new_child_button = document.getElementById("submit_child");
 let cancel_submit_child_button = document.getElementById("cancel_submit_child_button");
 let cancel_change_child_button = document.getElementById("cancel_change_child_button");
 
-//universal variables
+//universal variables/ "session variables"
 let logged_in_user;
 let account_type;
 let selcted_child;
@@ -219,13 +232,15 @@ function intialSetup(){
 //loads the page
 window.onload = intialSetup();
 
-
-
+//resets the home screen whenever the user returns to it
 function loadHomeScreen(){
+	//update map if the user is a parent
 	if(account_type == "parent"){
 		home_screen.hidden = false;
 		parent_features.hidden = false;
+		//load default map if no child is selected
 		if(selcted_child == undefined){
+			document.getElementById('outtermap').innerHTML = "<div id='map' style='width: 275px; height: 275px;'></div>";
         	var map = L.map('map').setView([latitude, longitude], 14);
         	mapLink = 
             '<a href="http://openstreetmap.org">OpenStreetMap</a>';
@@ -235,6 +250,7 @@ function loadHomeScreen(){
             	maxZoom: 18,
             	}).addTo(map);
 
+        	//plot child's location
         	//https://leafletjs.com/examples/quick-start/
         	var popup = L.popup()
             	.setLatLng([latitude, longitude])
@@ -242,19 +258,21 @@ function loadHomeScreen(){
             	.openOn(map);
 		}
 	}
+	//load the childs screen
 	else{
 		home_screen.hidden = false;
 		parent_features.hidden = true;
 	}
 }
 
+//sends login information to the server
 function sendLoginRequest(){
 	const username = document.getElementById("login_username").value;
 	const password_guess = document.getElementById("login_password").value;
 
 	document.getElementById("login_username").value = "";
 	document.getElementById("login_password").value = "";
-	// Make a URL-encoded string for passing POST data:
+	//regex check for invalid characters
           let re = /^[\w_\-]+$/;
           if(re.test(username))
 		  {
@@ -263,6 +281,7 @@ function sendLoginRequest(){
 		  	 	alert("username " + data['username'] + " is not a registered account ");
 		  	 	return;
 		  	 });
+		  	 //socket for a successful login
 		  	 socketio.on("successful_login", function(data){
 		  	 	login_screen.hidden = true;
 		  	 	account_type = data['account_type'];
@@ -275,22 +294,27 @@ function sendLoginRequest(){
 		  	 	console.log("the logged in user was set to " + logged_in_user);
 		  	 	loadHomeScreen();
 		  	 });
+		  	 //socket for an unsuccessfull login
 		  	 socketio.on("bad_login", function(data){
 		  	 	alert("not a valid login");
 		  	 	return;
 		  	 })
+		  	 //socket for an invalid username
 		  	 socketio.on("no_user_found", function(data){
 		  	 	alert(data['username'] + " is not a valid username");
 		  	 	return;
 		  	 })
 		  }
+		  //if the username entered is not possible
 		  else
 		  {
 		  	alert("Login failed. Invalid username");
 		  }
 }
 
+//function for registering users
 function sendRegisterRequest(){
+	//get user information
 	const username = document.getElementById("login_username_register").value;
 	let password = document.getElementById("login_password_register").value;
 	let repassword = document.getElementById("login_repassword_register").value;
@@ -298,7 +322,7 @@ function sendRegisterRequest(){
 	const phone_number = document.getElementById("phone_number").value;
 	let account_type_r;
 	let radios = document.getElementsByName("account_type");
-
+	//clear information from webpage
 	document.getElementById("login_username_register").value = "";
 	document.getElementById("login_password_register").value = "";
 	document.getElementById("login_repassword_register").value = "";
@@ -314,7 +338,7 @@ function sendRegisterRequest(){
   		break;
  		}
 	}
-	console.log("phone number: " + phone_number)
+	//if passwords dont match
 	if(password != repassword){
 		alert("password do not match ");
 		return;
@@ -323,18 +347,21 @@ function sendRegisterRequest(){
         let re = /^[\w_\-]+$/;
         if(re.test(username))
         {
+        	//if successfull, process user information
         	socketio.emit('password_hash',{username:username, password:password, address:address, phone_number:phone_number, account_type:account_type_r});
-
+        	//if the username is taken
     		socketio.on("username_taken", function(data){
     			alert("username " + data["username"] + " is taken ");
     			return;
     		});
+    		//if a user is created
     		socketio.on("user_created", function(data)
     		{
     			alert("user " + data['username'] + " was created");
     			return;
     		});
         }
+        //if the username entered cannot exist
         else
         {
         	alert("Invalid username; can only contain upper/lowercase letters, numbers, dashes, and underscores");
@@ -342,27 +369,27 @@ function sendRegisterRequest(){
         }
 }
 
-
+//listener for user login
 login_button.addEventListener("click", function(){
 	sendLoginRequest();
 });
-
+//takes user to the registration screen
 go_to_register_button.addEventListener("click", function(){
 	login_screen.hidden = true;
 	register_screen.hidden = false;
 });
-
+//returns the user to the home screen from the registration screen
 cancel_register_button.addEventListener("click", function(){
 	login_screen.hidden = false;
 	register_screen.hidden = true;
 });
-
+//listener to create a new user
 register_button.addEventListener("click", function(){
 	sendRegisterRequest();
 	register_screen.hidden = true;
 	login_screen.hidden = false;
 });
-
+//listener for the logout button, kills autolocation updates and resets global variables
 logout_button.addEventListener("click", function(){
 	home_screen.hidden = true;
 	login_screen.hidden = false;
@@ -376,76 +403,77 @@ logout_button.addEventListener("click", function(){
 	}
 	logged_in_user = undefined;
 	account_type = undefined;
+    selcted_child = undefined;
 });
-
-
+//listener to call the police
 panic_button.addEventListener("click", function(){
 	home_screen.hidden = true;
 	police_screen.hidden = false; 
 });
-
+//confirms the user wants to call the police
 call_police_button.addEventListener("click", function(){
 	police_screen.hidden = true;
 	services_contacted_screen.hidden = false;
 });
-
+//cancels police call
 cancel_police_call_button.addEventListener("click", function(){
 	police_screen.hidden = true;
 	loadHomeScreen();
 })
-
+//asks the user if they want medical services
 medical_button.addEventListener("click", function(){
 	medical_screen.hidden = false;
 	home_screen.hidden = true;
 });
-
+//cancels call to medical services
 cancel_medical_call.addEventListener("click", function(){
 	medical_screen.hidden = true;
 	loadHomeScreen();
 });
-
+//confirms call to medical services
 call_medical_button.addEventListener("click", function(){
 	medical_screen.hidden = true;
 	services_contacted_screen.hidden = false;
 });
-
+//returns to the home screen
 return_to_home_button.addEventListener("click", function(){
 	services_contacted_screen.hidden = true;
 	loadHomeScreen();
 });
-
-
+//loads all the children the parent has registered and allows them to changge the one they are tracking
 change_child_button.addEventListener("click", function(){
 	home_screen.hidden = true;
 	change_child_screen.hidden = false;
 	socketio.emit('get_all_children', {parent:logged_in_user});
+	//gets all of the parents children from the server
 	socketio.on('all_children', function(data){
 		let childrenArray = data['child_array'];
 		let html_list = document.getElementById('children_list');
 		html_list.innerHTML = "";
+		//iterates a list of children and listeners
 		for(let i = 0; i < childrenArray.length; i++){
 			let list_iteam = document.createElement("li");
 			list_iteam.innerText = childrenArray[i].child;
 			list_iteam.addEventListener('click', function(){
 				clearInterval(getLocTimer);
-				console.log("get location timer cleared");
 				selcted_child = list_iteam.innerText;
 				document.getElementById("child_name").innerText = "Child Name: " + selcted_child;
 				alert("the child " + selcted_child + " has been selected");
 				getLocTimer = setInterval( function() {getChildsLocation(logged_in_user,selcted_child);}, 10000);
-		  	 	console.log("get location interval has been set");
+		  	 	loadHomeScreen();
+		  	 	change_child_screen.hidden = true;
 			});
 			list_iteam.setAttribute("id", "Div" + i);
 			html_list.appendChild(list_iteam);
 		}
 	});
 });
-
+//returns the user to the home screen
 add_child_button.addEventListener("click", function(){
 	home_screen.hidden = true;
 	add_child_screen.hidden = false;
 });
-
+//submits the child the parent wants to add
 submit_new_child_button.addEventListener("click", function(){
 	loadHomeScreen();
 	add_child_screen.hidden = true;
@@ -460,20 +488,17 @@ submit_new_child_button.addEventListener("click", function(){
 		alert(data['child'] + " does not exist");
 	})
 });
-
-
+//leaves the submit child screen
 cancel_submit_child_button.addEventListener("click", function(){
-	home_screen.hidden = false;
+	loadHomeScreen();
 	add_child_screen.hidden = true;
 });
-
+//returns the user to the home screen if the leave the child list
 cancel_change_child_button.addEventListener("click", function(){
-	console.log("exit listener reached");
 	let list = document.getElementById("children_list");
 	change_child_screen.hidden = true;
 	loadHomeScreen();
 });
-
 //https://stackoverflow.com/questions/39366758/geolocation-without-ssl-connection
 //if geolocation is successfull
 var browserGeolocationSuccess = function(position) {
@@ -482,7 +507,6 @@ var browserGeolocationSuccess = function(position) {
     let longitude = position.coords.longitude;
     socketio.emit('update_child_location', {latitude:latitude, longitude:longitude, child:logged_in_user});
 };
-
 //if geolcation fails
 var browserGeolocationFail = function(error) {
     switch (error.code) {
@@ -504,7 +528,6 @@ var browserGeolocationFail = function(error) {
             break;
     }
 };
-
 //try geolocation 
 var tryGeolocation = function() {
 	console.log("try line reached");
@@ -515,17 +538,19 @@ var tryGeolocation = function() {
             {maximumAge: 50000, timeout: 20000, enableHighAccuracy: true});
     }
 };
-
+//takes in a parent and a child and returns the childs location to a registered parent
 function getChildsLocation(parent, child){
 	socketio.emit('getChildsLocation', {parent:parent, child:child});
+	//if the server fails to get the location 
 	socketio.on('location_not_available', function(data){
 		alert("the child's location is not available ");
 		return "failed to get location";
 	});
+	//if the server gets the childs location
 	socketio.on('child_location', function(data){
 		latitude = data['latitude'];
 		longitude = data['longitude'];
-		console.log(data['latitude'] + " is latitude and " + data['longitude'] + " is longitude");
+		//reset the map for the new child
 		document.getElementById('outtermap').innerHTML = "<div id='map' style='width: 275px; height: 275px;'></div>";
         var map = L.map('map').setView([latitude, longitude], 14);
         mapLink = 
@@ -535,15 +560,14 @@ function getChildsLocation(parent, child){
             attribution: '&copy; ' + mapLink + ' Contributors',
             maxZoom: 18,
             }).addTo(map);
-
         //https://leafletjs.com/examples/quick-start/
+        //popup to mark the childs location
         var popup = L.popup()
             .setLatLng([latitude, longitude])
             .setContent(String(selcted_child))
             .openOn(map);
 	});
 }
-
 </script>
 </html>
 
